// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DTabs Should render props.tabpanels as content of the list of tabpanels 1`] = `
<div
  aria-expanded="true"
  class="dTabpanel fontMedium outlinePrimaryMedium paddingDefault paddingDefaultMedium transitionFast"
  role="tabpanel"
  tabindex="0"
>
  Tabpanel 1
</div>
`;

exports[`DTabs Should render props.tabpanels as content of the list of tabpanels 2`] = `
<div
  aria-hidden="true"
  class="dTabpanel fontMedium outlinePrimaryMedium paddingDefault paddingDefaultMedium transitionFast"
  hidden=""
  role="tabpanel"
  tabindex="0"
>
  Tabpanel 2
</div>
`;

exports[`DTabs Should render props.tabs as content of the tablist 1`] = `
<li
  aria-controls="111-1"
  aria-selected="true"
  class="dTab fontMedium outlinePrimaryMedium paddingDefault paddingDefaultMedium sizeMedium transitionFast active"
  id="111"
  role="tab"
  tabindex="0"
>
  Tab 1
</li>
`;

exports[`DTabs Should render props.tabs as content of the tablist 2`] = `
<li
  aria-controls="222-2"
  class="dTab fontMedium outlinePrimaryMedium paddingDefault paddingDefaultMedium sizeMedium transitionFast"
  id="222"
  role="tab"
  tabindex="-1"
>
  Tab 2
</li>
`;

exports[`DTabs Should render slots.tabpanels as content of the list of tabpanels 1`] = `
<div
  aria-expanded="true"
  class="dTabpanel fontMedium outlinePrimaryMedium paddingDefault paddingDefaultMedium transitionFast"
  role="tabpanel"
  tabindex="0"
>
  Tabpanel 1
</div>
`;

exports[`DTabs Should render slots.tabpanels as content of the list of tabpanels 2`] = `
<div
  aria-hidden="true"
  class="dTabpanel fontMedium outlinePrimaryMedium paddingDefault paddingDefaultMedium transitionFast"
  hidden=""
  role="tabpanel"
  tabindex="0"
>
  Tabpanel 2
</div>
`;

exports[`DTabs Should render slots.tabs as content of the tablist 1`] = `
<li
  aria-controls="111-1"
  aria-selected="true"
  class="dTab fontMedium outlinePrimaryMedium paddingDefault paddingDefaultMedium sizeMedium transitionFast active"
  id="111"
  role="tab"
  tabindex="0"
>
  Tab 1
</li>
`;

exports[`DTabs Should render slots.tabs as content of the tablist 2`] = `
<li
  aria-controls="222-2"
  class="dTab fontMedium outlinePrimaryMedium paddingDefault paddingDefaultMedium sizeMedium transitionFast"
  id="222"
  role="tab"
  tabindex="-1"
>
  Tab 2
</li>
`;
